--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-magic",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "author": "Andi Dittrich (https://andidittrich.de)",
   "license": "MIT",
   "homepage": "https://github.com/AndiDittrich/Node.async-magic",
@@ -33,9 +33,11 @@
     "node": ">=7.6"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "eslint lib/*; mocha"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-aenondynamics": "^0.1.0",
     "mocha": "^3.4.2"
   }
 }
