--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "async-magic",
-  "version": "1.3.0",
-  "author": "Andi Dittrich (https://andidittrich.de)",
+  "version": "1.4.0",
+  "author": "Andi Dittrich (https://andidittrich.com)",
   "license": "MIT",
   "homepage": "https://github.com/AndiDittrich/Node.async-magic",
   "bugs": "https://github.com/AndiDittrich/Node.async-magic/issues",
